# vader-sentiment-rust

./: Cargo.toml  README.md
benches/: sentiment_benchmarks.rs
src/: demo.rs  lib.rs  main.rs  sarcasm.rs  tests.rs
src/resources/: vader_lexicon.txt
