[package]
name = "vader_sentiment"
version = "0.1.1"
edition = "2021"
authors = ["Chris <chriswong21@berkeley.edu>", "Mariana Meireles <mariana@psychonautgirl.space>"]
license = "MIT"
description = "Bindings for Rust from the original Python VaderSentiment analysis tool."
repository = "https://github.com/ckw017/vader-sentiment-rust"
documentation = "https://docs.rs/vader_sentiment"

[dependencies]
unicase = "2.6.0"
memchr = "2"
aho-corasick = "1"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sentiment_benchmarks"
harness = false
